Fixes scrolldown navbar padding so there is no spill under the mobile navbar, and it keeps it off the hero base nav links before scrolldown

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ ul {
     width: 100%; /* Full width */
     transition: top 0.3s; /* Transition effect when sliding down (and up) */
     z-index: 2;
-    padding: 16px 0;
+    padding: 10px 0;
   }
 
   #navbar a {
